[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://Art/Tileset.tres" type="TileSet" id=2]
[ext_resource path="res://Components/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Audio/Raining Bits LowFi.ogg" type="AudioStream" id=4]
[ext_resource path="res://Assets/uni0553-webfont.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Components/Spikes.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]

size = 50
use_mipmaps = false
use_filter = true
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Game" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="." index="0"]

scale = Vector2( 4, 4 )
mode = 0
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( -1179627, 3, 0, -1179626, 1, 0, -1179625, 0, 0, -1179624, 1, 0, -1179623, 0, 0, -1179622, 1, 0, -1179621, 2, 0, -1114091, 8, 0, -1114090, 9, 0, -1114089, 10, 0, -1114088, 9, 0, -1114087, 10, 0, -1114086, 9, 0, -1114085, 11, 0, -983024, 29, 0, -917488, 29, 0, -851952, 29, 0, -786416, 28, 0, -786410, 29, 0, -720880, 29, 0, -720874, 29, 0, -655344, 29, 0, -655338, 28, 0, -589802, 29, 0, -524266, 29, 0, -458730, 29, 0, -196623, 22, 0, -196622, 23, 0, -196621, 14, 0, -196620, 29, 0, -196619, 29, 0, -196618, 29, 0, -196617, 38, 0, -196616, 38, 0, -196615, 38, 0, -196614, 38, 0, -262127, 14, 0, -262126, 28, 0, -262125, 15, 0, -131096, 17, 0, -131095, 17, 0, -131094, 17, 0, -131093, 17, 0, -131092, 17, 0, -131091, 17, 0, -131090, 17, 0, -131089, 17, 0, -131088, 17, 0, -131087, 29, 0, -131086, 32, 0, -131085, 33, 0, -131084, 33, 0, -131083, 33, 0, -131082, 33, 0, -131081, 33, 0, -131080, 33, 0, -131079, 33, 0, -65566, 17, 0, -65565, 17, 0, -65564, 17, 0, -65563, 17, 0, -65562, 17, 0, -65561, 17, 0, -65560, 17, 0, -65559, 17, 0, -65558, 17, 0, -65557, 17, 0, -65556, 17, 0, -65555, 17, 0, -65554, 17, 0, -65553, 17, 0, -65552, 17, 0, -65551, 29, 0, -65550, 35, 0, -65549, 34, 0, -65548, 37, 0, -65547, 37, 0, -65546, 37, 0, -65545, 37, 0, -65544, 37, 0, -65543, 26, 0, -65542, 26, 0, -65541, 26, 0, -65540, 26, 0, -65539, 29, 0, -35, 17, 0, -34, 17, 0, -33, 17, 0, -32, 17, 0, -31, 17, 0, -30, 17, 0, -29, 17, 0, -28, 17, 0, -27, 17, 0, -26, 17, 0, -25, 17, 0, -24, 17, 0, -23, 17, 0, -22, 17, 0, -21, 17, 0, -20, 17, 0, -19, 17, 0, -18, 17, 0, -17, 17, 0, -16, 17, 0, -15, 29, 0, -14, 35, 0, -13, 37, 0, -12, 37, 0, -11, 37, 0, -10, 26, 0, -9, 18, 0, -8, 17, 0, -7, 17, 0, -6, 17, 0, -5, 17, 0, -4, 17, 0, -3, 28, 0, -65522, 28, 0, 65501, 17, 0, 65502, 17, 0, 65503, 17, 0, 65504, 17, 0, 65505, 17, 0, 65506, 17, 0, 65507, 17, 0, 65508, 17, 0, 65509, 17, 0, 65510, 17, 0, 65511, 17, 0, 65512, 17, 0, 65513, 17, 0, 65514, 17, 0, 65515, 17, 0, 65516, 17, 0, 65517, 17, 0, 65518, 17, 0, 65519, 17, 0, 65520, 17, 0, 65521, 29, 0, 65522, 35, 0, 65523, 34, 0, 65524, 37, 0, 65525, 37, 0, 65526, 26, 0, 65527, 26, 0, 65528, 26, 0, 65529, 26, 0, 65530, 26, 0, 65531, 26, 0, 65532, 17, 0, 65533, 29, 0, 3, 21, 0, 4, 23, 0, 14, 31, 0, 131037, 17, 0, 131038, 17, 0, 131039, 17, 0, 131040, 17, 0, 131041, 17, 0, 131042, 17, 0, 131043, 17, 0, 131044, 17, 0, 131045, 17, 0, 131046, 17, 0, 131047, 17, 0, 131048, 17, 0, 131049, 17, 0, 131050, 17, 0, 131051, 17, 0, 131052, 17, 0, 131053, 17, 0, 131054, 17, 0, 131055, 17, 0, 131056, 17, 0, 131057, 29, 0, 131058, 35, 0, 131059, 37, 0, 131060, 37, 0, 131061, 37, 0, 131062, 26, 0, 131063, 26, 0, 131064, 26, 0, 131065, 26, 0, 131066, 26, 0, 131067, 26, 0, 131068, 22, 0, 131069, 23, 0, 65550, 31, 0, 196572, 17, 0, 196573, 17, 0, 196574, 17, 0, 196575, 17, 0, 196576, 17, 0, 196577, 17, 0, 196578, 17, 0, 196579, 17, 0, 196580, 17, 0, 196581, 17, 0, 196582, 17, 0, 196583, 17, 0, 196584, 17, 0, 196585, 17, 0, 196586, 17, 0, 196587, 17, 0, 196588, 17, 0, 196589, 17, 0, 196590, 17, 0, 196591, 17, 0, 196592, 17, 0, 196593, 38, 0, 196594, 35, 0, 196595, 34, 0, 196596, 34, 0, 196597, 34, 0, 196598, 26, 0, 196599, 26, 0, 196600, 26, 0, 196601, 26, 0, 196602, 26, 0, 196603, 24, 0, 196604, 22, 0, 196605, 29, 0, 131086, 31, 0, 262107, 17, 0, 262108, 17, 0, 262109, 17, 0, 262110, 17, 0, 262111, 17, 0, 262112, 17, 0, 262113, 17, 0, 262114, 17, 0, 262115, 17, 0, 262116, 17, 0, 262117, 17, 0, 262118, 17, 0, 262119, 17, 0, 262120, 17, 0, 262121, 17, 0, 262122, 17, 0, 262123, 17, 0, 262124, 17, 0, 262125, 17, 0, 262126, 17, 0, 262127, 17, 0, 262128, 17, 0, 262129, 30, 0, 262130, 31, 0, 262131, 34, 0, 262132, 34, 0, 262133, 34, 0, 262134, 27, 0, 262135, 26, 0, 262136, 24, 0, 262137, 25, 0, 262138, 26, 0, 262139, 22, 0, 262140, 23, 0, 262141, 15, 0, 196616, 22, 0, 196617, 23, 0, 196622, 31, 0, 196634, 1, 0, 196635, 1, 0, 196636, 1, 0, 196637, 1, 0, 196638, 1, 0, 196639, 1, 0, 327643, 17, 0, 327644, 17, 0, 327645, 17, 0, 327646, 17, 0, 327647, 17, 0, 327648, 17, 0, 327649, 17, 0, 327650, 17, 0, 327651, 17, 0, 327652, 17, 0, 327653, 17, 0, 327654, 17, 0, 327655, 17, 0, 327656, 17, 0, 327657, 17, 0, 327658, 17, 0, 327659, 17, 0, 327660, 17, 0, 327661, 17, 0, 327662, 17, 0, 327663, 17, 0, 327664, 3, 0, 327665, 1, 0, 327666, 1, 0, 327667, 1, 0, 327668, 1, 0, 327669, 1, 0, 327670, 1, 0, 327671, 1, 0, 327672, 0, 0, 327673, 1, 0, 327674, 1, 0, 327675, 1, 0, 327676, 1, 0, 327677, 0, 0, 327678, 0, 0, 327679, 0, 0, 262144, 1, 0, 262145, 0, 0, 262146, 0, 0, 262147, 1, 0, 262148, 1, 0, 262149, 1, 0, 262150, 0, 0, 262151, 1, 0, 262152, 1, 0, 262153, 1, 0, 262154, 1, 0, 262155, 1, 0, 262156, 1, 0, 262157, 1, 0, 262158, 1, 0, 262159, 1, 0, 262160, 1, 0, 262161, 1, 0, 262162, 1, 0, 262163, 1, 0, 262164, 1, 0, 262165, 1, 0, 262166, 1, 0, 262167, 1, 0, 262168, 1, 0, 262169, 1, 0, 262170, 6, 0, 262171, 6, 0, 262172, 6, 0, 262173, 6, 0, 262174, 6, 0, 262175, 6, 0, 262176, 6, 0, 262177, 1, 0, 262178, 1, 0, 262179, 1, 0, 262180, 0, 0, 262181, 1, 0, 262182, 1, 0, 262183, 1, 0, 262184, 1, 0, 262185, 1, 0, 262186, 1, 0, 262187, 1, 0, 262188, 1, 0, 262189, 1, 0, 262190, 1, 0, 262191, 1, 0, 262192, 1, 0, 262193, 1, 0, 262194, 1, 0, 262195, 1, 0, 262196, 1, 0, 262197, 1, 0, 262198, 1, 0, 262199, 1, 0, 262200, 6, 0, 262201, 6, 0, 262202, 6, 0, 262203, 6, 0, 262204, 6, 0, 262205, 6, 0, 262206, 6, 0, 262207, 1, 0, 262208, 1, 0, 262209, 1, 0, 262210, 0, 0, 262211, 1, 0, 262212, 1, 0, 262213, 1, 0, 262214, 1, 0, 262215, 1, 0, 262216, 1, 0, 262217, 1, 0, 262218, 1, 0, 262219, 1, 0, 262220, 1, 0, 262221, 1, 0, 262222, 1, 0, 262223, 1, 0, 262224, 1, 0, 262225, 1, 0, 262226, 1, 0, 262227, 1, 0, 262228, 1, 0, 262229, 1, 0, 262230, 6, 0, 262231, 6, 0, 262232, 6, 0, 262233, 6, 0, 262234, 6, 0, 262235, 6, 0, 262236, 6, 0, 393178, 13, 0, 393179, 12, 0, 393180, 13, 0, 393181, 12, 0, 393182, 13, 0, 393183, 12, 0, 393184, 13, 0, 393185, 12, 0, 393186, 13, 0, 393187, 12, 0, 393188, 13, 0, 393189, 12, 0, 393190, 13, 0, 393191, 12, 0, 393192, 13, 0, 393193, 12, 0, 393194, 13, 0, 393195, 12, 0, 393196, 13, 0, 393197, 12, 0, 393198, 13, 0, 393199, 12, 0, 393200, 4, 0, 393201, 6, 0, 393202, 6, 0, 393203, 6, 0, 393204, 6, 0, 393205, 6, 0, 393206, 6, 0, 393207, 6, 0, 393208, 6, 0, 393209, 6, 0, 393210, 6, 0, 393211, 6, 0, 393212, 6, 0, 393213, 6, 0, 393214, 6, 0, 393215, 6, 0, 327680, 6, 0, 327681, 6, 0, 327682, 5, 0, 327683, 6, 0, 327684, 6, 0, 327685, 6, 0, 327686, 6, 0, 327687, 6, 0, 327688, 6, 0, 327689, 6, 0, 327690, 6, 0, 327691, 6, 0, 327692, 6, 0, 327693, 6, 0, 327694, 6, 0, 327695, 6, 0, 327696, 6, 0, 327697, 6, 0, 327698, 6, 0, 327699, 6, 0, 327700, 6, 0, 327701, 6, 0, 327702, 6, 0, 327703, 6, 0, 327704, 6, 0, 327705, 6, 0, 327706, 6, 0, 327707, 6, 0, 327708, 6, 0, 327709, 6, 0, 327710, 6, 0, 327711, 6, 0, 327712, 6, 0, 327713, 6, 0, 327714, 6, 0, 327715, 6, 0, 327716, 6, 0, 327717, 6, 0, 327718, 6, 0, 327719, 6, 0, 327720, 6, 0, 327721, 6, 0, 327722, 6, 0, 327723, 6, 0, 327724, 6, 0, 327725, 6, 0, 327726, 6, 0, 327727, 6, 0, 327728, 6, 0, 327729, 6, 0, 327730, 6, 0, 327731, 6, 0, 327732, 6, 0, 327733, 6, 0, 327734, 6, 0, 327735, 6, 0, 327736, 6, 0, 327737, 6, 0, 327738, 6, 0, 327739, 6, 0, 327740, 6, 0, 327741, 6, 0, 327742, 6, 0, 327743, 6, 0, 327744, 6, 0, 327745, 6, 0, 327746, 6, 0, 327747, 6, 0, 327748, 6, 0, 327749, 6, 0, 327750, 6, 0, 327751, 6, 0, 327752, 6, 0, 327753, 6, 0, 327754, 6, 0, 327755, 6, 0, 327756, 6, 0, 327757, 6, 0, 327758, 6, 0, 327759, 6, 0, 327760, 6, 0, 327761, 6, 0, 327762, 6, 0, 327763, 6, 0, 327764, 6, 0, 327765, 6, 0, 327766, 6, 0, 327767, 6, 0, 327768, 6, 0, 327769, 6, 0, 327770, 6, 0, 327771, 6, 0, 327772, 6, 0, 458714, 20, 0, 458715, 20, 0, 458716, 20, 0, 458717, 20, 0, 458718, 20, 0, 458719, 20, 0, 458720, 20, 0, 458721, 20, 0, 458722, 20, 0, 458723, 20, 0, 458724, 20, 0, 458725, 20, 0, 458726, 20, 0, 458727, 20, 0, 458728, 20, 0, 458729, 20, 0, 458730, 20, 0, 458731, 20, 0, 458732, 20, 0, 458733, 20, 0, 458734, 20, 0, 458735, 20, 0, 458736, 4, 0, 458737, 6, 0, 458738, 6, 0, 458739, 6, 0, 458740, 6, 0, 458741, 6, 0, 458742, 6, 0, 458743, 6, 0, 458744, 6, 0, 458745, 6, 0, 458746, 6, 0, 458747, 6, 0, 458748, 6, 0, 458749, 6, 0, 458750, 6, 0, 458751, 6, 0, 393216, 6, 0, 393217, 6, 0, 393218, 6, 0, 393219, 6, 0, 393220, 6, 0, 393221, 6, 0, 393222, 6, 0, 393223, 6, 0, 393224, 6, 0, 393225, 6, 0, 393226, 6, 0, 393227, 6, 0, 393228, 6, 0, 393229, 6, 0, 393230, 6, 0, 393231, 6, 0, 393232, 6, 0, 393233, 6, 0, 393234, 6, 0, 393235, 6, 0, 393236, 6, 0, 393237, 6, 0, 393238, 6, 0, 393239, 6, 0, 393240, 6, 0, 393241, 6, 0, 393242, 6, 0, 393243, 6, 0, 393244, 6, 0, 393245, 6, 0, 393246, 6, 0, 393247, 6, 0, 393248, 6, 0, 393249, 6, 0, 393250, 6, 0, 393251, 6, 0, 393252, 6, 0, 393253, 6, 0, 393254, 6, 0, 393255, 6, 0, 393256, 6, 0, 393257, 6, 0, 393258, 6, 0, 393259, 6, 0, 393260, 6, 0, 393261, 6, 0, 393262, 6, 0, 393263, 6, 0, 393264, 6, 0, 393265, 6, 0, 393266, 6, 0, 393267, 6, 0, 393268, 6, 0, 393269, 6, 0, 393270, 6, 0, 393271, 6, 0, 393272, 6, 0, 393273, 6, 0, 393274, 6, 0, 393275, 6, 0, 393276, 6, 0, 393277, 6, 0, 393278, 6, 0, 393279, 6, 0, 393280, 6, 0, 393281, 6, 0, 393282, 6, 0, 393283, 6, 0, 393284, 6, 0, 393285, 6, 0, 393286, 6, 0, 393287, 6, 0, 393288, 6, 0, 393289, 6, 0, 393290, 6, 0, 393291, 6, 0, 393292, 6, 0, 393293, 6, 0, 393294, 6, 0, 393295, 6, 0, 393296, 6, 0, 393297, 6, 0, 393298, 6, 0, 393299, 6, 0, 393300, 6, 0, 393301, 6, 0, 393302, 6, 0, 393303, 6, 0, 393304, 6, 0, 393305, 6, 0, 393306, 6, 0, 393307, 6, 0, 393308, 6, 0, 524250, 20, 0, 524251, 20, 0, 524252, 20, 0, 524253, 20, 0, 524254, 20, 0, 524255, 20, 0, 524256, 20, 0, 524257, 20, 0, 524258, 20, 0, 524259, 20, 0, 524260, 20, 0, 524261, 20, 0, 524262, 20, 0, 524263, 20, 0, 524264, 20, 0, 524265, 20, 0, 524266, 20, 0, 524267, 20, 0, 524268, 20, 0, 524269, 20, 0, 524270, 20, 0, 524271, 20, 0, 524272, 4, 0, 524273, 6, 0, 524274, 6, 0, 524275, 6, 0, 524276, 6, 0, 524277, 6, 0, 524278, 6, 0, 524279, 6, 0, 524280, 6, 0, 524281, 6, 0, 524282, 6, 0, 524283, 6, 0, 524284, 6, 0, 524285, 6, 0, 524286, 6, 0, 524287, 6, 0, 458752, 6, 0, 458753, 6, 0, 458754, 6, 0, 458755, 6, 0, 458756, 6, 0, 458757, 6, 0, 458758, 6, 0, 458759, 6, 0, 458760, 6, 0, 458761, 6, 0, 458762, 6, 0, 458763, 6, 0, 458764, 6, 0, 458765, 6, 0, 458766, 6, 0, 458767, 6, 0, 458768, 6, 0, 458769, 6, 0, 458770, 6, 0, 458771, 6, 0, 458772, 6, 0, 458773, 6, 0, 458774, 6, 0, 458775, 6, 0, 458776, 6, 0, 458777, 6, 0, 458778, 6, 0, 458779, 6, 0, 458780, 6, 0, 458781, 6, 0, 458782, 6, 0, 458783, 6, 0, 458784, 6, 0, 458785, 6, 0, 458786, 6, 0, 458787, 6, 0, 458788, 6, 0, 458789, 6, 0, 458790, 6, 0, 458791, 6, 0, 458792, 6, 0, 458793, 6, 0, 458794, 6, 0, 458795, 6, 0, 458796, 6, 0, 458797, 6, 0, 458798, 6, 0, 458799, 6, 0, 458800, 6, 0, 458801, 6, 0, 458802, 6, 0, 458803, 6, 0, 458804, 6, 0, 458805, 6, 0, 458806, 6, 0, 458807, 6, 0, 458808, 6, 0, 458809, 6, 0, 458810, 6, 0, 458811, 6, 0, 458812, 6, 0, 458813, 6, 0, 458814, 6, 0, 458815, 6, 0, 458816, 6, 0, 458817, 6, 0, 458818, 6, 0, 458819, 6, 0, 458820, 6, 0, 458821, 6, 0, 458822, 6, 0, 458823, 6, 0, 458824, 6, 0, 458825, 6, 0, 458826, 6, 0, 458827, 6, 0, 458828, 6, 0, 458829, 6, 0, 458830, 6, 0, 458831, 6, 0, 458832, 6, 0, 458833, 6, 0, 458834, 6, 0, 458835, 6, 0, 458836, 6, 0, 458837, 6, 0, 458838, 6, 0, 458839, 6, 0, 458840, 6, 0, 458841, 6, 0, 458842, 6, 0, 458843, 6, 0, 458844, 6, 0, 589786, 20, 0, 589787, 20, 0, 589788, 20, 0, 589789, 20, 0, 589790, 20, 0, 589791, 20, 0, 589792, 20, 0, 589793, 20, 0, 589794, 20, 0, 589795, 20, 0, 589796, 20, 0, 589797, 20, 0, 589798, 20, 0, 589799, 20, 0, 589800, 20, 0, 589801, 20, 0, 589802, 20, 0, 589803, 20, 0, 589804, 20, 0, 589805, 20, 0, 589806, 20, 0, 589807, 20, 0, 589808, 4, 0, 589809, 6, 0, 589810, 6, 0, 589811, 6, 0, 589812, 6, 0, 589813, 6, 0, 589814, 6, 0, 589815, 6, 0, 589816, 6, 0, 589817, 6, 0, 589818, 6, 0, 589819, 6, 0, 589820, 6, 0, 589821, 6, 0, 589822, 6, 0, 589823, 6, 0, 524288, 6, 0, 524289, 6, 0, 524290, 6, 0, 524291, 6, 0, 524292, 6, 0, 524293, 6, 0, 524294, 6, 0, 524295, 6, 0, 524296, 6, 0, 524297, 6, 0, 524298, 6, 0, 524299, 6, 0, 524300, 6, 0, 524301, 6, 0, 524302, 6, 0, 524303, 6, 0, 524304, 6, 0, 524305, 6, 0, 524306, 6, 0, 524307, 6, 0, 524308, 6, 0, 524309, 6, 0, 524310, 6, 0, 524311, 6, 0, 524312, 6, 0, 524313, 6, 0, 524314, 6, 0, 524315, 6, 0, 524316, 6, 0, 524317, 6, 0, 524318, 6, 0, 524319, 6, 0, 524320, 6, 0, 524321, 6, 0, 524322, 6, 0, 524323, 6, 0, 524324, 6, 0, 524325, 6, 0, 524326, 6, 0, 524327, 6, 0, 524328, 6, 0, 524329, 6, 0, 524330, 6, 0, 524331, 6, 0, 524332, 6, 0, 524333, 6, 0, 524334, 6, 0, 524335, 6, 0, 524336, 6, 0, 524337, 6, 0, 524338, 6, 0, 524339, 6, 0, 524340, 6, 0, 524341, 6, 0, 524342, 6, 0, 524343, 6, 0, 524344, 6, 0, 524345, 6, 0, 524346, 6, 0, 524347, 6, 0, 524348, 6, 0, 524349, 6, 0, 524350, 6, 0, 524351, 6, 0, 524352, 6, 0, 524353, 6, 0, 524354, 6, 0, 524355, 6, 0, 524356, 6, 0, 524357, 6, 0, 524358, 6, 0, 524359, 6, 0, 524360, 6, 0, 524361, 6, 0, 524362, 6, 0, 524363, 6, 0, 524364, 6, 0, 524365, 6, 0, 524366, 6, 0, 524367, 6, 0, 524368, 6, 0, 524369, 6, 0, 524370, 6, 0, 524371, 6, 0, 524372, 6, 0, 524373, 6, 0, 524374, 6, 0, 524375, 6, 0, 524376, 6, 0, 524377, 6, 0, 524378, 6, 0, 524379, 6, 0, 524380, 6, 0, 655322, 20, 0, 655323, 20, 0, 655324, 20, 0, 655325, 20, 0, 655326, 20, 0, 655327, 20, 0, 655328, 20, 0, 655329, 20, 0, 655330, 20, 0, 655331, 20, 0, 655332, 20, 0, 655333, 20, 0, 655334, 20, 0, 655335, 20, 0, 655336, 20, 0, 655337, 20, 0, 655338, 20, 0, 655339, 20, 0, 655340, 20, 0, 655341, 20, 0, 655342, 20, 0, 655343, 20, 0, 655344, 4, 0, 655345, 6, 0, 655346, 6, 0, 655347, 6, 0, 655348, 6, 0, 655349, 6, 0, 655350, 6, 0, 655351, 6, 0, 655352, 6, 0, 655353, 6, 0, 655354, 6, 0, 655355, 6, 0, 655356, 6, 0, 655357, 6, 0, 655358, 6, 0, 655359, 6, 0, 589824, 6, 0, 589825, 6, 0, 589826, 6, 0, 589827, 6, 0, 589828, 6, 0, 589829, 6, 0, 589830, 6, 0, 589831, 6, 0, 589832, 6, 0, 589833, 6, 0, 589834, 6, 0, 589835, 6, 0, 589836, 6, 0, 589837, 6, 0, 589838, 6, 0, 589839, 6, 0, 589840, 6, 0, 589841, 6, 0, 589842, 6, 0, 589843, 6, 0, 589844, 6, 0, 589845, 6, 0, 589846, 6, 0, 589847, 6, 0, 589848, 6, 0, 589849, 6, 0, 589850, 6, 0, 589851, 6, 0, 589852, 6, 0, 589853, 6, 0, 589854, 6, 0, 589855, 6, 0, 589856, 6, 0, 589857, 6, 0, 589858, 6, 0, 589859, 6, 0, 589860, 6, 0, 589861, 6, 0, 589862, 6, 0, 589863, 6, 0, 589864, 6, 0, 589865, 6, 0, 589866, 6, 0, 589867, 6, 0, 589868, 6, 0, 589869, 6, 0, 589870, 6, 0, 589871, 6, 0, 589872, 6, 0, 589873, 6, 0, 589874, 6, 0, 589875, 6, 0, 589876, 6, 0, 589877, 6, 0, 589878, 6, 0, 589879, 6, 0, 589880, 6, 0, 589881, 6, 0, 589882, 6, 0, 589883, 6, 0, 589884, 6, 0, 589885, 6, 0, 589886, 6, 0, 589887, 6, 0, 589888, 6, 0, 589889, 6, 0, 589890, 6, 0, 589891, 6, 0, 589892, 6, 0, 589893, 6, 0, 589894, 6, 0, 589895, 6, 0, 589896, 6, 0, 589897, 6, 0, 589898, 6, 0, 589899, 6, 0, 589900, 6, 0, 589901, 6, 0, 589902, 6, 0, 589903, 6, 0, 589904, 6, 0, 589905, 6, 0, 589906, 6, 0, 589907, 6, 0, 589908, 6, 0, 589909, 6, 0, 589910, 6, 0, 589911, 6, 0, 589912, 6, 0, 589913, 6, 0, 589914, 6, 0, 589915, 6, 0, 589916, 6, 0, 720858, 20, 0, 720859, 20, 0, 720860, 20, 0, 720861, 20, 0, 720862, 20, 0, 720863, 20, 0, 720864, 20, 0, 720865, 20, 0, 720866, 20, 0, 720867, 20, 0, 720868, 20, 0, 720869, 20, 0, 720870, 20, 0, 720871, 20, 0, 720872, 20, 0, 720873, 20, 0, 720874, 20, 0, 720875, 20, 0, 720876, 20, 0, 720877, 20, 0, 720878, 20, 0, 720879, 20, 0, 720880, 4, 0, 720881, 6, 0, 720882, 6, 0, 720883, 6, 0, 720884, 6, 0, 720885, 6, 0, 720886, 6, 0, 720887, 6, 0, 720888, 6, 0, 720889, 6, 0, 720890, 6, 0, 720891, 6, 0, 720892, 6, 0, 720893, 6, 0, 720894, 6, 0, 720895, 6, 0, 655360, 6, 0, 655361, 6, 0, 655362, 6, 0, 655363, 6, 0, 655364, 6, 0, 655365, 6, 0, 655366, 6, 0, 655367, 6, 0, 655368, 6, 0, 655369, 6, 0, 655370, 6, 0, 655371, 6, 0, 655372, 6, 0, 655373, 6, 0, 655374, 6, 0, 655375, 6, 0, 655376, 6, 0, 655377, 6, 0, 655378, 6, 0, 655379, 6, 0, 655380, 6, 0, 655381, 6, 0, 655382, 6, 0, 655383, 6, 0, 655384, 6, 0, 655385, 6, 0, 655386, 6, 0, 655387, 6, 0, 655388, 6, 0, 655389, 6, 0, 655390, 6, 0, 655391, 6, 0, 655392, 6, 0, 655393, 6, 0, 655394, 6, 0, 655395, 6, 0, 655396, 6, 0, 655397, 6, 0, 655398, 6, 0, 655399, 6, 0, 655400, 6, 0, 655401, 6, 0, 655402, 6, 0, 655403, 6, 0, 655404, 6, 0, 655405, 6, 0, 655406, 6, 0, 655407, 6, 0, 655408, 6, 0, 655409, 6, 0, 655410, 6, 0, 655411, 6, 0, 655412, 6, 0, 655413, 6, 0, 655414, 6, 0, 655415, 6, 0, 655416, 6, 0, 655417, 6, 0, 655418, 6, 0, 655419, 6, 0, 655420, 6, 0, 655421, 6, 0, 655422, 6, 0, 655423, 6, 0, 655424, 6, 0, 655425, 6, 0, 655426, 6, 0, 655427, 6, 0, 655428, 6, 0, 655429, 6, 0, 655430, 6, 0, 655431, 6, 0, 655432, 6, 0, 655433, 6, 0, 655434, 6, 0, 655435, 6, 0, 655436, 6, 0, 655437, 6, 0, 655438, 6, 0, 655439, 6, 0, 655440, 6, 0, 655441, 6, 0, 655442, 6, 0, 655443, 6, 0, 655444, 6, 0, 655445, 6, 0, 655446, 6, 0, 655447, 6, 0, 655448, 6, 0, 655449, 6, 0, 655450, 6, 0, 655451, 6, 0, 655452, 6, 0, 786394, 20, 0, 786395, 20, 0, 786396, 20, 0, 786397, 20, 0, 786398, 20, 0, 786399, 20, 0, 786400, 20, 0, 786401, 20, 0, 786402, 20, 0, 786403, 20, 0, 786404, 20, 0, 786405, 20, 0, 786406, 20, 0, 786407, 20, 0, 786408, 20, 0, 786409, 20, 0, 786410, 20, 0, 786411, 20, 0, 786412, 20, 0, 786413, 20, 0, 786414, 20, 0, 786415, 20, 0, 786416, 4, 0, 786417, 6, 0, 786418, 6, 0, 786419, 6, 0, 786420, 6, 0, 786421, 6, 0, 786422, 6, 0, 786423, 6, 0, 786424, 6, 0, 786425, 6, 0, 786426, 6, 0, 786427, 6, 0, 786428, 6, 0, 786429, 6, 0, 786430, 6, 0, 786431, 6, 0, 720896, 6, 0, 720897, 6, 0, 720898, 6, 0, 720899, 6, 0, 720900, 6, 0, 720901, 6, 0, 720902, 6, 0, 720903, 6, 0, 720904, 6, 0, 720905, 6, 0, 720906, 6, 0, 720907, 6, 0, 720908, 6, 0, 720909, 6, 0, 720910, 6, 0, 720911, 6, 0, 720912, 6, 0, 720913, 6, 0, 720914, 6, 0, 720915, 6, 0, 720916, 6, 0, 720917, 6, 0, 720918, 6, 0, 720919, 6, 0, 720920, 6, 0, 720921, 6, 0, 720922, 6, 0, 720923, 6, 0, 720924, 6, 0, 720925, 6, 0, 720926, 6, 0, 720927, 6, 0, 720928, 6, 0, 720929, 6, 0, 720930, 6, 0, 720931, 6, 0, 720932, 6, 0, 720933, 6, 0, 720934, 6, 0, 720935, 6, 0, 720936, 6, 0, 720937, 6, 0, 720938, 6, 0, 720939, 6, 0, 720940, 6, 0, 720941, 6, 0, 720942, 6, 0, 720943, 6, 0, 720944, 6, 0, 720945, 6, 0, 720946, 6, 0, 720947, 6, 0, 720948, 6, 0, 720949, 6, 0, 720950, 6, 0, 720951, 6, 0, 720952, 6, 0, 720953, 6, 0, 720954, 6, 0, 720955, 6, 0, 720956, 6, 0, 720957, 6, 0, 720958, 6, 0, 720959, 6, 0, 720960, 6, 0, 720961, 6, 0, 720962, 6, 0, 720963, 6, 0, 720964, 6, 0, 720965, 6, 0, 720966, 6, 0, 720967, 6, 0, 720968, 6, 0, 720969, 6, 0, 720970, 6, 0, 720971, 6, 0, 720972, 6, 0, 720973, 6, 0, 720974, 6, 0, 720975, 6, 0, 720976, 6, 0, 720977, 6, 0, 720978, 6, 0, 720979, 6, 0, 720980, 6, 0, 720981, 6, 0, 720982, 6, 0, 720983, 6, 0, 720984, 6, 0, 720985, 6, 0, 720986, 6, 0, 720987, 6, 0, 720988, 6, 0, 851930, 20, 0, 851931, 20, 0, 851932, 20, 0, 851933, 20, 0, 851934, 20, 0, 851935, 20, 0, 851936, 20, 0, 851937, 20, 0, 851938, 20, 0, 851939, 20, 0, 851940, 20, 0, 851941, 20, 0, 851942, 20, 0, 851943, 20, 0, 851944, 20, 0, 851945, 20, 0, 851946, 20, 0, 851947, 20, 0, 851948, 20, 0, 851949, 20, 0, 851950, 20, 0, 851951, 20, 0, 786452, 6, 0, 786453, 6, 0, 786454, 6, 0, 786455, 6, 0, 786456, 6, 0, 786457, 6, 0, 786458, 6, 0, 786459, 6, 0, 786460, 6, 0, 786461, 6, 0, 786462, 6, 0, 786463, 6, 0, 786464, 6, 0, 786482, 6, 0, 786483, 6, 0, 786484, 6, 0, 786485, 6, 0, 786486, 6, 0, 786487, 6, 0, 786488, 6, 0, 786489, 6, 0, 786490, 6, 0, 786491, 6, 0, 786492, 6, 0, 786493, 6, 0, 786494, 6, 0, 786512, 6, 0, 786513, 6, 0, 786514, 6, 0, 786515, 6, 0, 786516, 6, 0, 786517, 6, 0, 786518, 6, 0, 786519, 6, 0, 786520, 6, 0, 786521, 6, 0, 786522, 6, 0, 786523, 6, 0, 786524, 6, 0, 917466, 20, 0, 917467, 20, 0, 917468, 20, 0, 917469, 20, 0, 917470, 20, 0, 917471, 20, 0, 917472, 20, 0, 917473, 20, 0, 917474, 20, 0, 917475, 20, 0, 917476, 20, 0, 917477, 20, 0, 917478, 20, 0, 917479, 20, 0, 917480, 20, 0, 917481, 20, 0, 917482, 20, 0, 917483, 20, 0, 917484, 20, 0, 917485, 20, 0, 917486, 20, 0 )
_sections_unfolded = [ "Cell", "Transform" ]

[node name="Clones" type="Node2D" parent="." index="1"]

[node name="Player" parent="." index="2" instance=ExtResource( 3 )]

position = Vector2( -547.492, 35.5905 )
_sections_unfolded = [ "Transform" ]

[node name="Camera2D" type="Camera2D" parent="Player" index="3"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1.5, 1.5 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Smoothing", "Transform" ]

[node name="Music" type="AudioStreamPlayer" parent="." index="3"]

stream = ExtResource( 4 )
volume_db = -5.0
autoplay = true
mix_target = 0
bus = "Master"

[node name="CanvasLayer" type="CanvasLayer" parent="." index="4"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="Control" type="Control" parent="CanvasLayer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="StartLabel" type="Label" parent="CanvasLayer/Control" index="0"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -341.0
margin_top = -35.5
margin_right = 341.0
margin_bottom = 35.5
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Press any key to start ...."
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme", "custom_fonts" ]

[node name="Spikes" parent="." index="5" instance=ExtResource( 6 )]

position = Vector2( 500, 220 )

[node name="Spikes2" parent="." index="6" instance=ExtResource( 6 )]

position = Vector2( 223.49, 83.4626 )
rotation = -1.57903

[node name="Corpses" type="Node2D" parent="." index="7"]

[node name="SpawnPosition" type="Position2D" parent="." index="8"]

position = Vector2( -550, -60 )

[node name="Timer" type="Timer" parent="." index="9"]

process_mode = 1
wait_time = 0.8
one_shot = true
autostart = false

[node name="SpawnTimer" type="Timer" parent="." index="10"]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]


